--- a/www/index.html
+++ b/www/index.html
@@ -44,8 +44,7 @@
 
 <body>
     <div class="app">
-        <a href = "https://signature-healthcare.followmyhealth.com/Login/Home/Index?authproviders=0&returnArea=PatientAccess#/default">go to the portal</a>
-
+       <a href="#" onclick="window.open(encodeURI('https://signature-healthcare.followmyhealth.com/Login/Home/Index?authproviders=0&returnArea=PatientAccess#/default'), '_system')">Test link 2</a>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
